--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=4002
-MONGO_URL=mongodb+srv://test:test@cluster0.gboqrza.mongodb.net/waggyshop
+MONGO_URL=mongodb://localhost:27017/waggyshop
 JWT_SECRET=secret_key
 BASE_URL=http://localhost:4002
